--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ enum-ordinalize = "4.3"
 thiserror = "2"
 flate2 = "1.0"
 byteorder = "1"
-sark_grids = "0.7"
+sark_grids = { git = "https://github.com/giuseppeferrari/sark_grids_rs.git", version = "0.7.0" }
 bevy_platform = "0.18"
 anyhow = "1.0.100"
 nom = "8.0.0"
